<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="end">
    <RelativeLayout
        android:id="@+id/v_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.pixlee.pixleesdk.ui.widgets.list.PXLPhotoRecyclerView
            android:id="@+id/pxlPhotoRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <com.pixlee.pixleesdk.ui.widgets.PXLLoading
            android:id="@+id/lottieView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/spacing_smlarge"
            android:layout_marginLeft="@dimen/spacing_smlarge"
            android:layout_marginRight="@dimen/spacing_smlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:clickable="true"
            android:tint="@android:color/white"
            app:fabSize="normal"
            app:rippleColor="@android:color/white"
            app:backgroundTint="@android:color/holo_blue_dark"
            android:src="@drawable/baseline_filter_alt_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/spacing_smlarge"
            android:layout_marginLeft="@dimen/spacing_smlarge"
            android:layout_marginRight="@dimen/spacing_smlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_above="@+id/fabFilter"
            android:clickable="true"
            app:fabSize="normal"
            android:src="@drawable/ic_baseline_cloud_upload_24" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_smlarge"
            android:layout_marginLeft="@dimen/spacing_smlarge"
            android:layout_marginRight="@dimen/spacing_smlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:padding="10dp"
            android:background="#66000000"
            android:textColor="@color/white_50"
            android:layout_alignParentBottom="true"
            android:switchPadding="16dp"
            android:text="Sound"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            />

        <TextView
            android:id="@+id/tvDebugText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:background="@color/black_800"
            android:textColor="#ffffff"
            android:alpha="0"
            />
    </RelativeLayout>
    <!--navigation drawer menu-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="false">

        <include android:id="@+id/module_search_layout" layout="@layout/module_search" />

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
