<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pixlee.pixleesdk.ui.widgets.PXLPhotoProductView
        android:id="@+id/pxlPhotoProductView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tvDebugTextViewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:background="@color/black_800"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:alpha="0"
        />
</RelativeLayout>