<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vListRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.pixlee.pixleesdk.ui.widgets.PXLPhotoView
        android:id="@+id/pxlPhotoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/ivSourceIcon"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:scaleType="fitCenter"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        tools:src="@drawable/icon_instagram"
        />

    <TextView
        android:id="@+id/tvPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        tools:text="Visibility percents: 200"
        tools:textColor="@color/black_800"
        android:gravity="right"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/pxlPhotoView"
        />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Visibility percents: 200"
        tools:textColor="@color/black_800"
        android:gravity="right"
        android:textColor="#ffffff"
        android:paddingRight="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_below="@+id/tvPercent"
        />
</RelativeLayout>