...
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/videoView"
        tools:text="00:10"
        android:paddingTop="7dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="7dp"
        android:layout_alignParentEnd="true" />
    <com.airbnb.lottie.LottieAnimationView
...
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>
