...
                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/filterRadioButton"
                    android:id="@+id/radioGroupContentTypeImage"
                    android:text="image" />
                <com.google.android.material.checkbox.MaterialCheckBox
                    style="@style/filterRadioButton"
                    android:id="@+id/radioGroupContentTypeVideo"
                    android:text="video"
                    android:checked="true"
                    />
            </RadioGroup>
            <!-- hasProduct-->
            <TextView style="@style/filterHeaderTextView" android:text="Sorting" android:layout_marginTop="10dp"/>
...
                    android:text="email" />
            </RadioGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red_500"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="APPLY"
...
